[package]
name = "r1"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9"
bma-benchmark = "0.0.24"
tokio = { version = "1", features = ["full"] }
threadpool = "1.8"
lapin = "2.5.3"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio-amqp = "2.0"
futures-util = "0.3"
criterion = { version = "0.6.0", features = ["async_tokio"] }


[[bench]]
name = "sensor_bench"
harness = false